<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ReservationInfoActivity">

    <include layout="@layout/my_toolbar"/>

    <TextView
        android:id="@+id/reservedByName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/reserved_by"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/reservedNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/reserved_seats"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reservedDate"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/reservation_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reservedTime"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/reservation_time"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:backgroundTint="#CF3434"
            android:text="@string/cancel_reservation"
            android:textSize="18sp" />

        <Button
            android:id="@+id/completeReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="#7FD34A"
            android:text="@string/complete_reservation"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>