<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RestaurantActivity" >

    <include
        layout="@layout/my_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/restaurant_name_placeholder"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/restaurantCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_category_placeholder"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/location"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/restaurantLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/location"
                android:textColor="@color/text_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurantScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/restaurantReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="serif"
                android:gravity="center|bottom"
                android:text="@string/reviews"
                android:textColor="@color/text_color"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurantTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/opening_times"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/restaurantOpeningTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fake_time"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reserveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/reserve_now" />

            <Button
                android:id="@+id/addReviewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_review" />
        </LinearLayout>

        <TextView
            android:id="@+id/MenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/menu"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menuRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/menu_recyclerview_item"></androidx.recyclerview.widget.RecyclerView>
</LinearLayout>