<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.UserRegisterationActivity">

    <include
        layout="@layout/my_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/food1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:gravity="center"
                android:text="@string/registeration"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/fullNamePrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordRegisterPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true" />

            <EditText
                android:id="@+id/phonePrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prompt_phone"
                android:inputType="phone" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>