<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ReservationActivity">

    <include
        layout="@layout/my_toolbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/reserved_seats"
            android:textSize="18sp" />

        <NumberPicker
            android:id="@+id/reservationNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/reservation_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/datePickerText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/reservation_date_placeholder"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/reservation_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/timePickerText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/reservation_time_placeholder"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/submit_reservation"
        android:textSize="18sp" />

</LinearLayout>