<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <include
        layout="@layout/my_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                app:srcCompat="@drawable/food1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/emailPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="75dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="75dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/sign_in" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/no_account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_login"
                    android:layout_alignParentBottom="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="serif"
                    android:gravity="center|bottom"
                    android:text="@string/sign_up"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>