<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProfileActivity">

    <include layout="@layout/my_toolbar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/usericon2" />

    <TextView
        android:id="@+id/changeInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/edit_info"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/reservationHistory"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/reservation"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/sign_out" />

</LinearLayout>