<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/menuItemImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/foodicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/menuItemName"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/menu_item_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/menuItemImage"
        app:layout_constraintTop_toTopOf="@+id/menuItemImage" />

    <TextView
        android:id="@+id/menuItemDescription"
        android:layout_width="206dp"
        android:layout_height="54dp"
        android:text="@string/menu_item_desc"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/menuItemName"
        app:layout_constraintTop_toBottomOf="@+id/menuItemName" />

    <TextView
        android:id="@+id/menuItemPrice"
        android:layout_width="73dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:text="@string/menu_item_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toEndOf="@+id/menuItemName"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>